pages/primitives/docs/components/dialog/0.0.2/index.mdx
---
title: Dialog
name: dialog
description: A window overlaid on either the primary window or another dialog window, rendering the content underneath inert.
aria: https://www.w3.org/TR/wai-aria-practices-1.2/#dialog_modal
features:
  - Focus is automatically trapped.
  - Works in an uncontrolled way by default.
  - Can also be controlled.
---

import { DialogHero } from '../../../../../../components/Hero/DialogHero';

<HeroSlot>
  <DialogHero />
</HeroSlot>

## Installation

Install the component from your command line.

```bash
npm install @radix-ui/react-dialog
```

## Anatomy

Import the components and piece the parts together.

```jsx
import * as Dialog from '@radix-ui/react-dialog';

export default () => (
  <Dialog.Root>
    <Dialog.Trigger />
    <Dialog.Overlay />
    <Dialog.Content>
      <Dialog.Close />
    </Dialog.Content>
  </Dialog.Root>
);
```

## Basic example

Create your styled dialog component from the dialog primitives.

```jsx manual
// import { styled } from 'path-to/stitches.config';
import * as Dialog from '@radix-ui/react-dialog';

const StyledOverlay = styled(Dialog.Overlay, {
  backgroundColor: 'rgba(0, 0, 0, .15)',
  position: 'fixed',
  top: 0,
  right: 0,
  bottom: 0,
  left: 0,
});

const StyledContent = styled(Dialog.Content, {
  position: 'fixed',
  top: '50%',
  left: '50%',
  transform: 'translate(-50%, -50%)',
  minWidth: 200,
  maxWidth: 'fit-content',
  maxHeight: '85vh',
  padding: 20,
  marginTop: '-5vh',
  backgroundColor: 'white',
  borderRadius: 6,

  '&:focus': {
    outline: 'none',
  },
});

export default () => (
  <Dialog.Root>
    <Dialog.Trigger>Open</Dialog.Trigger>
    <StyledOverlay />
    <StyledContent>
      <p>Dialog content</p>
      <Dialog.Close>Close</Dialog.Close>
    </StyledContent>
  </Dialog.Root>
);
```

<Note>

**Note:** This example uses [Stitches](https://stitches.dev) but any styling solution is [compatible](../../overview/styling).

</Note>

## API Reference

### Root

Contains all the parts of a dialog.

<PropsTable
  data={[
    {
      name: 'defaultOpen',
      type: 'boolean',
      description: (
        <span>
          The open state of the dialog when it is initially rendered.
          Use when you do not need to control its open state.
        </span>
      ),
    },
    {
      name: 'open',
      type: 'boolean',
      description: (
        <span>
          The controlled open state of the dialog. Must be used in
          conjunction with <Code>onOpenChange</Code>.
        </span>
      ),
    },
    {
      name: 'onOpenChange',
      type: '(open: boolean) => void',
      typeSimple: 'function',
      description: (
        <span>
          Event handler called when the open state of the dialog
          changes.
        </span>
      ),
    },
    {
      name: 'id',
      type: 'string',
      description: (
        <span>
          A unique identifier for the component. The <Code>id</Code>{' '}
          is used to generate <Code>id</Code> attributes for nested
          components. If no <Code>id</Code> prop is provided, a
          generated id will be used.
        </span>
      ),
    },
  ]}
/>

### Trigger

The button that opens the dialog.

<PropsTable
  data={[
    {
      name: 'as',
      required: false,
      type: 'keyof JSX.IntrinsicElements | React.ComponentType<any>',
      typeSimple: 'enum',
      default: 'button',
      description:
        'Change the component to a different HTML tag or custom component. This will merge the original component props with the props of the supplied element/component and change the underlying DOM node.',
    },
    {
      name: 'selector',
      required: false,
      type: 'string | null',
      default: 'radix-dialog-trigger',
      description: (
        <span>
          A string to use as the component selector for CSS purposes.
          It will be added as a data attribute. Pass <Code>null</Code>{' '}
          to remove selector.
        </span>
      ),
    },
  ]}
/>

### Overlay

A layer that covers the inert portion of the view when the dialog is open.

<PropsTable
  data={[
    {
      name: 'as',
      required: false,
      type: 'keyof JSX.IntrinsicElements | React.ComponentType<any>',
      typeSimple: 'enum',
      default: 'div',
      description:
        'Change the component to a different HTML tag or custom component. This will merge the original component props with the props of the supplied element/component and change the underlying DOM node.',
    },
    {
      name: 'selector',
      required: false,
      type: 'string | null',
      default: 'radix-dialog-overlay',
      description: (
        <span>
          A string to use as the component selector for CSS purposes.
          It will be added as a data attribute. Pass <Code>null</Code>{' '}
          to remove selector.
        </span>
      ),
    },
    {
      name: 'forceMount',
      type: 'boolean',
      description:
        'Used to force mounting when more control is needed. Useful when controlling animation with React animation libraries.',
    },
  ]}
/>

### Content

Contains content to be rendered in the open dialog.

<PropsTable
  data={[
    {
      name: 'as',
      required: false,
      type: 'keyof JSX.IntrinsicElements | React.ComponentType<any>',
      typeSimple: 'enum',
      default: 'div',
      description:
        'Change the component to a different HTML tag or custom component. This will merge the original component props with the props of the supplied element/component and change the underlying DOM node.',
    },
    {
      name: 'selector',
      required: false,
      type: 'string | null',
      default: 'radix-dialog-content',
      description: (
        <span>
          A string to use as the component selector for CSS purposes.
          It will be added as a data attribute. Pass <Code>null</Code>{' '}
          to remove selector.
        </span>
      ),
    },
    {
      name: 'forceMount',
      type: 'boolean',
      description:
        'Used to force mounting when more control is needed. Useful when controlling animation with React animation libraries.',
    },
    {
      name: 'onOpenAutoFocus',
      type: '(event: Event) => void',
      typeSimple: 'function',
      description: (
        <span>
          Event handler called when focus moves into the component
          after opening. It can be prevented by calling{' '}
          <Code>event.preventDefault</Code>.
        </span>
      ),
    },
    {
      name: 'onCloseAutoFocus',
      type: '(event: Event) => void',
      typeSimple: 'function',
      description: (
        <span>
          Event handler called when focus moves to the trigger after
          closing. It can be prevented by calling{' '}
          <Code>event.preventDefault</Code>.
        </span>
      ),
    },
    {
      name: 'onEscapeKeyDown',
      type: '(event: KeyboardEvent) => void',
      typeSimple: 'function',
      description: (
        <span>
          Event handler called when the escape key is down. It can be
          prevented by calling <Code>event.preventDefault</Code>.
        </span>
      ),
    },
    {
      name: 'onPointerDownOutside',
      type: '(event: MouseEvent | TouchEvent) => void',
      typeSimple: 'function',
      description: (
        <span>
          Event handler called when a pointer event occurs outside the
          bounds of the component. It can be prevented by calling{' '}
          <Code>event.preventDefault</Code>.
        </span>
      ),
    },
  ]}
/>

### Close

The button that closes the dialog.

<PropsTable
  data={[
    {
      name: 'as',
      required: false,
      type: 'keyof JSX.IntrinsicElements | React.ComponentType<any>',
      typeSimple: 'enum',
      default: 'button',
      description:
        'Change the component to a different HTML tag or custom component. This will merge the original component props with the props of the supplied element/component and change the underlying DOM node.',
    },
    {
      name: 'selector',
      required: false,
      type: 'string | null',
      default: 'radix-dialog-close',
      description: (
        <span>
          A string to use as the component selector for CSS purposes.
          It will be added as a data attribute. Pass <Code>null</Code>{' '}
          to remove selector.
        </span>
      ),
    },
  ]}
/>

## Accessibility

Adheres to the [Dialog WAI-ARIA design pattern](https://www.w3.org/TR/wai-aria-practices-1.2/#dialog_modal).

### Keyboard Interactions

<KeyboardTable
  data={[
    {
      keys: ['Space'],
      description: 'Opens/closes the dialog.',
    },
    {
      keys: ['Enter'],
      description: 'Opens/closes the dialog.',
    },
    {
      keys: ['Tab'],
      description: 'Moves focus to the next focusable element.',
    },
    {
      keys: ['Shift + Tab'],
      description: 'Moves focus to the previous focusable element.',
    },
    {
      keys: ['Esc'],
      description: (
        <span>
          Closes the dialog and moves focus to{' '}
          <Code>Dialog.Trigger</Code>.
        </span>
      ),
    },
  ]}
/>

## Custom APIs

Create your own API by abstracting the primitive parts into your own component.

### Abstract the overlay and the close button

This example abstracts the `Dialog.Overlay` and `Dialog.Close` parts.

#### Usage

```jsx
import { Dialog, DialogTrigger, DialogContent } from './your-dialog';

export default () => (
  <Dialog>
    <DialogTrigger>Dialog trigger</DialogTrigger>
    <DialogContent>Dialog Content</DialogContent>
  </Dialog>
);
```

#### Implementation

```jsx
// your-dialog.js
import React from 'react';
import * as DialogPrimitive from '@radix-ui/react-dialog';
import { Cross1Icon } from '@radix-ui/react-icons';

export function Dialog({ children, ...props }) {
  return (
    <DialogPrimitive.Root {...props}>
      <DialogPrimitive.Overlay />
      {children}
    </DialogPrimitive.Root>
  );
}

export const DialogContent = React.forwardRef(
  ({ children, ...props }, forwardedRef) => (
    <DialogPrimitive.Content {...props} ref={forwardedRef}>
      {children}
      <DialogPrimitive.Close>
        <Cross1Icon />
      </DialogPrimitive.Close>
    </DialogPrimitive.Content>
  )
);

export const DialogTrigger = DialogPrimitive.Trigger;
export const DialogClose = DialogPrimitive.Close;
```
